Designer module now selects groups of optimal cross setions and reinforcing patterns for a user specified Mu value.
-- added abilities to sort DesignResults by rebar size, by section width, and by section depth.
-- currently only analyzes SRR sections.
-- very limited list of rebar size options.

--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DevelopmentLength\BaseDevelopmentLength.cs" />
     <Compile Include="DevelopmentLength\HookDevelopmentLength.cs" />
     <Compile Include="Flexure\DesignResult.cs" />
+    <Compile Include="Flexure\FlexuralDesigner.cs" />
     <Compile Include="Models\RebarCatalog.cs" />
     <Compile Include="Models\RebarLayer.cs" />
     <Compile Include="Models\RebarModel.cs" />
