--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -31,21 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\RebarConstants.cs" />
     <Compile Include="CoverAndSpacing\CoverAndspacing.cs" />
     <Compile Include="DevelopmentLength\BaseDevelopmentLength.cs" />
     <Compile Include="DevelopmentLength\HookDevelopmentLength.cs" />
-    <Compile Include="Flexure\DesignResult.cs" />
+    <Compile Include="ACIDrawingHelpers.cs" />
+    <Compile Include="Flexure\Controls\DesignResultControl.xaml.cs">
+      <DependentUpon>DesignResultControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Flexure\DesignResultModel.cs" />
     <Compile Include="Flexure\FlexuralDesigner.cs" />
     <Compile Include="Models\RebarCatalog.cs" />
     <Compile Include="Models\RebarLayer.cs" />
@@ -54,6 +62,11 @@
     <Compile Include="DevelopmentLength\StraightDevelopmentLength.cs" />
     <Compile Include="Models\CrossSection.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Flexure\Controls\DesignResultControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
