Design all feature now works.  Optimized for multithreading.
-- thanks the ChatGPT for the suggesstion to multi thread it.  Soooo much faster now.
-- Code cleanup and some refactoring required.  But for now this is a good milestone.

--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Flexure\Controls\RebarLayerViewModel.cs" />
     <Compile Include="Flexure\DesignResultModel.cs" />
     <Compile Include="Flexure\FlexuralDesigner.cs" />
+    <Compile Include="MemberDimensionProportioner.cs" />
     <Compile Include="Models\RebarCatalog.cs" />
     <Compile Include="Models\RebarLayer.cs" />
     <Compile Include="Models\RebarModel.cs" />
