--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -61,8 +61,11 @@
     </Compile>
     <Compile Include="Flexure\Controls\CrossSectionViewModel.cs" />
     <Compile Include="Flexure\Controls\DesignAllInputViewModel.cs" />
-    <Compile Include="Flexure\Controls\DesignResultControl.xaml.cs">
-      <DependentUpon>DesignResultControl.xaml</DependentUpon>
+    <Compile Include="Flexure\Controls\ShearDesignResultControl.xaml.cs">
+      <DependentUpon>ShearDesignResultControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Flexure\Controls\FlexureDesignResultControl.xaml.cs">
+      <DependentUpon>FlexureDesignResultControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Flexure\Controls\DoubleValidationRule.cs" />
     <Compile Include="Flexure\Controls\NumericUpDown.xaml.cs">
@@ -73,7 +76,7 @@
     </Compile>
     <Compile Include="Flexure\Controls\RebarLayerViewModel.cs" />
     <Compile Include="Flexure\ShearDesignResultModel.cs" />
-    <Compile Include="Flexure\DesignResultModel.cs" />
+    <Compile Include="Flexure\FlexuralDesignResultModel.cs" />
     <Compile Include="Flexure\FlexuralDesigner.cs" />
     <Compile Include="Flexure\ShearDesigner.cs" />
     <Compile Include="Flexure\ValueConverters\NumberToBackgroundConverter.cs" />
@@ -98,7 +101,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Flexure\Controls\DesignResultControl.xaml">
+    <Page Include="Flexure\Controls\ShearDesignResultControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Flexure\Controls\FlexureDesignResultControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
