Added ability to set stirrup regions in our calculator.
--This allows us to compute our nominal shear capacity for the section now.
-- Still need to apply limits and error checking on the Vs values (currently Vs can compute a value larger than the ACI limit of 8 * sqrt(f'c) * bw * d
-- Still need to apply limits and checks for Av,min and Av, max, as well as min and max spacing limits.

--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -69,11 +69,15 @@
     <Compile Include="Flexure\Controls\NumericUpDown.xaml.cs">
       <DependentUpon>NumericUpDown.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Flexure\DialogWindows\StirrupRebarLayerInputDialog.xaml.cs">
+      <DependentUpon>StirrupRebarLayerInputDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Flexure\DialogWindows\RebarLayerInputDialog.xaml.cs">
       <DependentUpon>RebarLayerInputDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Flexure\ViewModels\ConcreteCrossSectionViewModel.cs" />
     <Compile Include="Flexure\ViewModels\DesignAllInputViewModel.cs" />
+    <Compile Include="Flexure\ViewModels\StirrupRebarLayerViewModel.cs" />
     <Compile Include="Flexure\ViewModels\RebarLayerViewModel.cs" />
     <Compile Include="Flexure\FlexuralDesignResultModel.cs" />
     <Compile Include="Flexure\FlexuralDesigner.cs" />
@@ -112,6 +116,10 @@
     <Page Include="Flexure\Controls\NumericUpDown.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Flexure\DialogWindows\StirrupRebarLayerInputDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Flexure\DialogWindows\RebarLayerInputDialog.xaml">
       <SubType>Designer</SubType>
