--- a/ACI318_19Library.csproj
+++ b/ACI318_19Library.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Models\RebarStirrupLayer.cs" />
     <Compile Include="Models\RebarLayer.cs" />
     <Compile Include="Models\RebarModel.cs" />
+    <Compile Include="Models\ShearLayerResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DevelopmentLength\StraightDevelopmentLength.cs" />
     <Compile Include="Models\ConcreteCrossSection.cs" />
